# fief-python

./: .gitignore  README.md  justfile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  codeql-analysis.yml  docs.yml
examples/fastapi/: minimal.py
fief_client/: __init__.py  client.py  crypto.py  pkce.py
fief_client/integrations/: __init__.py  cli.py  fastapi.py  flask.py
fief_client/integrations/django/: apps.py  backend.py  client.py  models.py  urls.py  views.py
fief_client/integrations/django/migrations/: 0001_initial.py
tests/: conftest.py  django_app.py  django_settings.py  test_client.py  test_init.py  test_integrations_cli.py  test_integrations_django.py  test_integrations_fastapi.py  test_integrations_flask.py  test_pkce.py
